--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,15 @@
 	<input type="file" id="file" name="file" />
 	<output id="list"></output>
 	<div id="sk"></div>
+	<div>
 	<label >Threshold:</label>
-	<input type="range" id="threshold" min=0.2 max=1 step=0.01 value=0.5 />
+		<input type="range" id="threshold" min=0.2 max=1 step=0.01 value=0.5 />
 	<label >Max:</label>
-	<input type="range" id="mmax" min=0.0 max=0.2 step=0.0001 value=0.05 />
+		<input type="range" id="mmax" min=0.0 max=0.2 step=0.0001 value=0.05 />
 	<label >Min:</label>
-	<input type="range" id="mmin" min=0.0 max=0.01 step=0.0000001 value=0.0 />
+		<input type="range" id="mmin" min=0.0 max=0.01 step=0.0000001 value=0.0 />
 	<label >Stroke:</label>
-	<input type="range" id="strweight" min=0.1 max=3 step=0.1 value=1 />
+		<input type="range" id="strweight" min=0.1 max=3 step=0.1 value=1 /></div>
+	<div><button id="savebtn">Save</button></div>
 </body>
 </html>
